--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "redaxios": "^0.5.0",
+    "vue": "^2.6.14",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
